# feedforward_closedloop_learning

./: CMakeLists.txt  Doxyfile  LICENSE  MANIFEST.in  Makefile  README  README.md  README_py.rst  act_error_flow.cdr  activ_learning.cdr  bandpass.cpp  bandpass.h  build.sh  deep_feedback_learning.cpp  deep_feedback_learning.h  deep_feedback_learning.i  deep_feedback_learning.py  deep_feedback_learning.sln  deep_feedback_learning_wrap.cxx  deep_ico.cpp  deep_ico.h  deep_ico.i  deep_ico.py  doxy.md  fcl.cpp  fcl.h  fcl.i  fcl_util.cpp  fcl_util.h  gendoc.sh  globals.h  layer.cpp  layer.h  learning_units_comparison.cdr  neuron.cpp  neuron.h  numpy.i  setup.py  test_bp_learning_with_filters.py  test_bp_learning_with_filters_and_deriv.py  (+9 more)
ala/: FPSFig4.eps  FPSFig7.eps  Makefile  aamas2018.cls  ala_submission.tex  botOutput.eps  closed_loop.cdr  closed_loop.eps  embodiment.bib  hebb.bib  line_results.cdr  line_stats.cdr  line_stats.eps  linefollower_robot_playground.eps  netw_together.cdr  netw_together.eps  ours.bib  selbstorg.bib  wtsGrowth1.eps
ala/aamas2017_example/: .aamas2017.cls.swp  .aamas2017_sample.tex.swp  aamas2017.cls  aamas2017_extendedabstract.cls  aamas2017_sample.aux  aamas2017_sample.blg  aamas2017_sample.tex
dfldoom/: README  _vizdoom.ini  _vizdoomNetwork.cfg  basic-multispawnmultiammo.wad  basic-multispawnmultiammo1.wad  basicSingleMonster.wad  health_gathering.wad  my_basic.py  run_agentConv.py  run_agentDFL.py  run_agentTF1.py  test_agent.py  testico.py
doc/html/: files.js  (+31 more)
docs/: annotated.html  annotated_dup.js  bandpass_8h_source.html  classBandpass.js  classFCLBandpass-members.html  classFCLBandpass.html  classFCLBandpass.js  classFCLLayer-members.html  classFCLLayer.html  classFCLLayer.js  classFCLNeuron-members.html  classFCLNeuron.html  classFCLNeuron.js  classFeedforwardClosedloopLearning-members.html  classFeedforwardClosedloopLearning.html  classFeedforwardClosedloopLearning.js  classFeedforwardClosedloopLearningWithFilterbank-members.html  classFeedforwardClosedloopLearningWithFilterbank.html  classFeedforwardClosedloopLearningWithFilterbank.js  classFeedforwardClosedloopLearningWithFilterbank__coll__graph.md5  classFeedforwardClosedloopLearning__inherit__graph.map  classNeuron.html  classes.html  classfeedforward__closedloop__learning_1_1CalcOutputThread-members.html  classfeedforward__closedloop__learning_1_1CalcOutputThread.html  classfeedforward__closedloop__learning_1_1CalcOutputThread.js  classfeedforward__closedloop__learning_1_1CalcOutputThread__coll__graph.map  classfeedforward__closedloop__learning_1_1CalcOutputThread__inherit__graph.md5  classfeedforward__closedloop__learning_1_1DoubleVector-members.html  classfeedforward__closedloop__learning_1_1DoubleVector.html  classfeedforward__closedloop__learning_1_1DoubleVector.js  classfeedforward__closedloop__learning_1_1DoubleVector__inherit__graph.map  classfeedforward__closedloop__learning_1_1DoubleVector__inherit__graph.md5  classfeedforward__closedloop__learning_1_1FCLLayer-members.html  classfeedforward__closedloop__learning_1_1FCLLayer.html  classfeedforward__closedloop__learning_1_1FCLLayer.js  classfeedforward__closedloop__learning_1_1FCLLayer__coll__graph.map  classfeedforward__closedloop__learning_1_1FCLLayer__coll__graph.md5  classfeedforward__closedloop__learning_1_1FCLNeuron-members.html  classfeedforward__closedloop__learning_1_1FCLNeuron.html  (+97 more)
fcl/: bandpass.cpp  bandpass.h  globals.h  layer.cpp  layer.h  neuron.cpp  neuron.h
fcldoom/: README  _vizdoom.ini  basic-multiammo.wad  basic-multispawnpos.wad  defend_the_line.wad  my_basic.py
icodoom/: README  _vizdoom.cfg  _vizdoom.ini  _vizdoomBasic.cfg  basic-noammo.wad  basic.wad  cig2017multispawn.wad  cig2017noItemsnoLava.wad  deadly_corridor.wad  defend_the_center.wad  health_gathering_supreme.wad  my_way_home.wad  mybasic.wad  oldbasic.wad  predict_position.wad  rocket_basic.wad  run_agent.py  run_agentBasic.py  run_agentNew.py  run_agentOld.py  run_agentTF.py  run_agentTFBasic.py  run_spect.py  simpler_basic.wad  take_cover.wad
lib/: lib.vcxproj  lib.vcxproj.filters
linefollower/: CMakeLists.txt  Linefollower.cpp  Linefollower.h  Playground.cpp  README  README.md  Racer.cpp  Racer.h  linefollower.pro  llog.tsv  playground.pro  plot_abs_error.py  plot_weight_distance.plt  plotweights.py
linefollower/cldl/: CMakeLists.txt  Linefollower.cpp  cldl_bandpass.cpp  cldl_bandpass.h  cldl_filterbank.cpp  cldl_filterbank.h  cldl_globals.h  cldl_layer.cpp  cldl_layer.h  cldl_net.cpp  cldl_net.h  cldl_neuron.cpp  cldl_neuron.h  plot_weight_distance.plt
nips/: FPSFig4.eps  Figure_6.eps  LINKS  closed_loop.cdr  closed_loop.eps  finalKD.eps  limbic.bib  line_results.eps  line_stats.cdr  linefollower_robot_playground.cdr  netw_overview.cdr  netw_together.cdr  netw_together.eps  nips_2018_author_response.tex  nips_submission.tex  ours.bib  statsKD.eps
sab/: FPSFig.cdr  FPSFig2.eps  FPSFig7.cdr  FPSFig7.eps  Makefile  Sage_LaTeX_Guidelines.tex  cell.cdr  cell.eps  closed_loop.cdr  embodiment.bib  hebb.bib  laplace.bib  line_results.cdr  line_stats.cdr  line_stats.eps  linefollower_robot_playground.cdr  linefollower_robot_playground.eps  loc.txt  multipleSmoothKD.eps  netw_overview.eps  netw_together.cdr  netw_together.eps  sab_submission.bbl  sab_submission.tex
testdoom/: my_basic.py  testdoom.py
tests_c/: CMakeLists.txt  Makefile  README  plot_closed_loop.py  plot_closedloop.py  plot_forward.py  plot_learning.py  plot_learning_with_filters.py  test_bandpass.cpp  test_closed_loop.cpp  test_deep_feedback_learning.cpp  test_deep_feedback_learning.vcxproj  test_deep_feedback_learning.vcxproj.filters  test_fcl.cpp  test_fcl_filters.cpp  test_layer.cpp  test_neuron.cpp  test_neuron.vcxproj  test_neuron.vcxproj.filters
tests_py/: README  README.md  test_bp_learning_with_filters.py  test_bp_learning_with_filters_and_deriv.py  test_dfl_learning_with_filters.py  test_fcl_with_filters.py  test_ico_learning_with_filters.py  test_ico_learning_with_filters_and_deriv.py
vizdoom/: backprop.py  basic_forward_one_hid_layer.py  forw.py  ico.py
(+193 files in other folders)
